--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<section class="bears">
 			<h2>Bears</h2>
 			<p>Did you know that a bear's closest relative is the seal? Or that bears can smell over 2,000 times better than humans?</p>
-			<div class="image-container">
+			<div class="images-container">
 				<img
 					src="https://placebear.com/200/300"
 					alt="Grizzly Bear"
@@ -135,7 +135,7 @@
 			<h3>Useful Links</h3>
 			<p>
 			</p>
-			<a href="https://www.w3schools.com" target:"_blank">w3schools.com</a>
+			<a href="https://www.w3schools.com" target="_blank">w3schools.com</a>
 			<a href="https://www.nationalgeographic.com/" target="_blank">National Geographic</a>
 			<a href="http://www.wikipedia.org" target="_blank">Wikipedia</a>
 		</section>
